# rst

./: .clang-format  .travis.yaml  .travis.yml  CMakeLists.txt  LICENSE  README  README.md
.github/workflows/: codeql-analysis.yml
rst/: Logger.h  Option.h  Result.h  Status.h  Test.cpp
rst/Bind/: Bind.h  BindHelpers.h  BindHelpersTest.cpp  BindTest.cpp
rst/BuildFlag/: BuildFlag.h  BuildFlagTest.cpp
rst/Check/: Check.h  CheckNDebugTest.cpp  CheckTest.cpp  NDebugTest.cpp  Test.cpp  Test2.cpp
rst/Cpp14/: Memory.h  Test.cpp
rst/Defer/: Defer.h  DeferTest.cpp  Test.cpp
rst/Files/: FileUtil.cpp  FileUtil.h  FileUtilTest.cpp
rst/Format/: Format.cpp  Format.h  FormatError.cpp  FormatError.h  FormatTest.cpp  Test.cpp  Writer.cpp  Writer.h
rst/GUID/: GUID.cpp  GUID.h  GUIDTest.cpp
rst/HiddenString/: HiddenString.h  HiddenStringTest.cpp  Test.cpp
rst/Legacy/: Memory.h  MemoryTest.cpp  Optional.h  OptionalTest.cpp
rst/Logger/: FileNameSink.cpp  FileNameSink.h  FilePtrSink.cpp  FilePtrSink.h  ISink.cpp  ISink.h  LogError.cpp  LogError.h  Logger.cpp  Logger.h  LoggerNDebugTest.cpp  LoggerTest.cpp  Test.cpp
rst/Macros/: Macros.h  MacrosTest.cpp
rst/Memory/: Memory.h  MemoryTest.cpp  WeakPtr.h  WeakPtrTest.cpp
rst/Mutex/: Mutex.cpp  Mutex.h  Test.cpp
rst/NoDestructor/: NoDestructor.h  NoDestructorTest.cpp
rst/Noncopyable/: Noncopyable.h  NoncopyableTest.cpp  Test.cpp
rst/NotNull/: NotNull.h  NotNullTest.cpp
rst/Option/: Option.h  Test.cpp
rst/Optional/: Optional.h  OptionalTest.cpp  Test.cpp
rst/Preferences/: IPreferencesStore.cpp  IPreferencesStore.h  MemoryPreferencesStore.cpp  MemoryPreferencesStore.h  Preferences.cpp  Preferences.h  PreferencesTest.cpp
rst/RTTI/: RTTI.h  RTTITest.cpp
rst/Random/: RandomDevice.cpp  RandomDevice.h
rst/Result/: Result.h  Test.cpp
rst/SQL/: DB.cpp  DB.h  DriverManager.cpp  DriverManager.h  Rows.cpp  Rows.h  Stmt.h  Test.cpp
rst/SQL/driver/: Conn.h  Driver.h  Rows.h  Stmt.h
rst/SQL/mysql/: Conn.cpp  Conn.h  Driver.cpp  Driver.h  Rows.cpp  Rows.h  Stmt.cpp  Stmt.h
rst/STL/: Adapters.h  AdaptersTest.cpp  Algorithm.h  AlgorithmTest.cpp
rst/Sockets/: TCPServerSocket.cpp  TCPServerSocket.h  TCPSocket.cpp  TCPSocket.h
rst/Status/: Status.cpp  Status.h  StatusOr.h  StatusOrTest.cpp  StatusTest.cpp  Test.cpp
rst/TaskRunner/: ITaskRunner.cpp  ITaskRunner.h  Item.cpp  Item.h  PollingTaskRunner.cpp  PollingTaskRunner.h  PollingTaskRunnerTest.cpp  ThreadTaskRunner.cpp  ThreadTaskRunner.h  ThreadTaskRunnerTest.cpp
rst/Threading/: Barrier.cpp  Barrier.h  BarrierTest.cpp
rst/Type/: TypeTest.cpp
rst/Util/: Int64.h
rst/Value/: Value.cpp  Value.h  ValueTest.cpp
rst/bind/: bind.h  bind_helpers.h  bind_helpers_test.cc  bind_test.cc
rst/check/: check.h  check_ndebug_test.cc  check_test.cc
rst/clone/: clone.h  clone_test.cc
rst/defer/: defer.h  defer_test.cc
rst/files/: file_utils.cc  file_utils.h  file_utils_test.cc
rst/format/: format.cc  format.h  format_test.cc
rst/guid/: guid.cc  guid.h  guid_test.cc
rst/hidden_string/: hidden_string.h  hidden_string_test.cc
rst/legacy/: memory.h  memory_test.cc  optional.h  optional_test.cc
rst/logger/: file_name_sink.cc  file_name_sink.h  file_ptr_sink.cc  file_ptr_sink.h  log_error.cc  log_error.h  logger.cc  logger.h  logger_ndebug_test.cc  logger_test.cc  sink.cc  sink.h
rst/macros/: macros.h  macros_test.cc  optimization.h  optimization_test.cc  os.h  thread_annotations.h
rst/memory/: memory.h  memory_test.cc  weak_ptr.h  weak_ptr_test.cc
rst/no_destructor/: no_destructor.h  no_destructor_test.cc
rst/not_null/: not_null.h  not_null_test.cc
rst/preferences/: memory_preferences_store.cc  memory_preferences_store.h  preferences.cc  preferences.h  preferences_store.cc  preferences_store.h  preferences_test.cc
rst/random/: random_device.cc  random_device.h  random_device_test.cc
rst/rtti/: rtti.h  rtti_test.cc
rst/status/: status.cc  status.h  status_macros.h  status_macros_test.cc  status_or.h  status_or_test.cc  status_test.cc
rst/stl/: adapters.h  adapters_test.cc  algorithm.h  algorithm_test.cc  function.h  function_test.cc  hash.cc  hash.h  hash_test.cc  resize_uninitialized.h  resize_uninitialized_test.cc  reversed.h  reversed_test.cc  vector_builder.h  vector_builder_test.cc
rst/strings/: arg.cc  arg.h  format.cc  format.h  format_test.cc  str_cat.cc  str_cat.h  str_cat_test.cc
rst/task_runner/: item.cc  item.h  iteration_item.h  polling_task_runner.cc  polling_task_runner.h  polling_task_runner_test.cc  task_runner.cc  task_runner.h  thread_pool_task_runner.cc  thread_pool_task_runner.h  thread_pool_task_runner_test.cc  thread_task_runner.cc  thread_task_runner.h  thread_task_runner_test.cc
rst/threading/: barrier.cc  barrier.h  barrier_test.cc
rst/timer/: one_shot_timer.cc  one_shot_timer.h  one_shot_timer_test.cc
rst/type/: type.h  type_test.cc
rst/value/: value.cc  value.h  value_test.cc
